update headerbar buttons in backdrop state to fix dark colors that are not visible on dark backgrounds in darker variants

--- a/Bubble-Dark-Blue/gtk-3.0/gtk.css
+++ b/Bubble-Dark-Blue/gtk-3.0/gtk.css
@@ -1041,7 +1041,9 @@ window > .titlebar:not(headerbar), window > .titlebar:not(headerbar):backdrop, w
   background-color: rgba(26, 30, 34, 0);
   border-color: rgba(26, 30, 34, 0); }
   .primary-toolbar button:backdrop, headerbar button:backdrop {
-    opacity: 0.7; }
+    opacity: 0.5; }
+    .primary-toolbar button:backdrop label, headerbar button:backdrop label, .primary-toolbar button:backdrop, headerbar button:backdrop {
+      color: rgba(246, 248, 250, 0.8); }
   .primary-toolbar button:hover, headerbar button:hover {
     color: rgba(246, 248, 250, 0.8);
     border-color: rgba(0, 0, 0, 0.35);
